[package]
name = "small"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.7"
bytesize = "1.1.0"
libc = "0.2.124"
parse-display = "0.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
smartstring = { version = "1.0.1", features = ["serde"] }
smol_str = { version = "0.1.22", features = ["serde"] }
textplots = "0.8.0"
